syntax = "proto2";

import "test/proto2/test.proto";
import "test/proto/test2.proto";
import "test/proto/test3.proto";

option java_package = "test.proto";

service TestService {
  rpc TestMethod1 (TestRequest) returns (TestResponse1) {}
  rpc TestMethod2 (TestRequest) returns (TestResponse2) {}
}
